--- a/ui.html
+++ b/ui.html
@@ -272,7 +272,7 @@
   const change_selectedButton = document.getElementById('change_selected');
   const changeBackgroundButton = document.getElementById('change_background');
   const denoise_slider = document.getElementById('denoise_slider');
-  const mode_options = document.getElementById('mode');
+  const mode_options = document.getElementsByName('mode');
   const image_2_vectorsButton = document.getElementById('image_2_vectors');
   const vectors_guidance_slider = document.getElementById('vectors_guidance_slider');
   const mask_only_checkbox = document.getElementById('mask_only');
