--- a/ui.html
+++ b/ui.html
@@ -230,7 +230,7 @@
           <input type="range" id="denoise_slider" min="0" max="1" value="0.75" step="0.05">
           <fieldset>
             <legend>Choose a mode:</legend>
-            <div class="row"><input type="radio" id="render" name="mode" value="render"><label for="render">Render Mode</label></div>
+            <div class="row"><input type="radio" id="render" name="mode" value="render" checked><label for="render">Render Mode</label></div>
             <div class="row"><input type="radio" id="inpaint" name="mode" value="inpaint"><label for="inpaint">Inpaint Mode</label></div>
           </fieldset>
         </fieldset>
